# risc0-compat

./: .gitignore  Cargo.toml
abstract-circuit/: Cargo.toml
abstract-circuit/src/: main.rs
kairos-circuit/host/: Cargo.toml
kairos-circuit/host/src/: main.rs
kairos-circuit/methods/: Cargo.toml
kairos-circuit/methods/guest/: Cargo.toml
kairos-circuit/methods/guest/src/: main.rs
kairos-sha256/host/: Cargo.toml
kairos-sha256/host/src/: main.rs
kairos-sha256/methods/guest/: Cargo.toml
kairos-sha256/methods/guest/src/: main.rs
kairos-signatures/: kairos_secret_key.pem
kairos-signatures/host/: Cargo.toml
kairos-signatures/host/src/: main.rs
kairos-signatures/methods/guest/: Cargo.toml
kairos-signatures/methods/guest/src/: main.rs
risc0-compat/: Cargo.toml
risc0-compat/src/: compat.rs  lib.rs
risc0-compat/src/compat/: crypto.rs  env.rs  storage.rs
signature-types/: Cargo.toml
signature-types/src/: lib.rs
