[package]
name = "risc0-compat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
risc0 = ["dep:risc0-zkvm"]

[dependencies]
serde={version="1", default-features=false, features=["derive"]}
risc0-zkvm = {version = "0.21.0", default-features=false, optional=true}
sha2 = {version="0.10", default-features=false}