[package]
name = "circuit"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
# If you want to try (experimental) std support, add `features = [ "std" ]` to risc0-zkvm
risc0-zkvm = { version = "0.21.0", default-features=false }
risc0-compat = {path="../../../risc0-compat", default-features=false, features=["risc0"]}
serde = {version="1", default-features=false}